<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">运动云医院</string>
    <string name="reply">回答</string>
    <string name="publish">发表</string>
    <string name="home">首页</string>
    <string name="ask_question">提问</string>
    <string name="title">标题</string>
    <string name="publish_question_hint">输入具体内容</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="immediately_register">立即注册</string>
    <string name="publish_question">发表提问</string>
    <string name="phone_number">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="next_step">下一步</string>
    <string name="register">注册</string>
    <string name="comment">评论</string>
    <string name="praise">赞</string>
    <string name="publish_comment">发评论</string>
    <string name="phone">手机</string>
    <string name="hint_phone">请输入您的手机号码</string>
    <string name="hint_verification">请输入您的验证码</string>
    <string name="hint_password">6-20位字符</string>
    <string name="hint_repassword">请确认登录密码</string>
    <string name="hint_profession">请选择您的职业</string>
    <string name="hint_username">字母开头的4-20位数字或字母组成</string>
    <string name="submit">提交</string>
    <string name="choose_identity">选择身份</string>
    <string name="profession">职业</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preach">宣讲</string>
    <string name="personal">个人</string>
    <string name="myExpert">专家</string>
    <string name="question">问答</string>
    <string name="personal_center">个人中心</string>
    <string name="my_ques">我的问题</string>
    <string name="quit">退出账号</string>
    <string name="wonderful_question">精彩问答</string>
    <string name="toast_modify_avatar_success">头像修改成功</string>
    <string name="my_expert">我的专家</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="hint_title">2-20字描述您的问题</string>
    <string name="common_user">普通用户</string>
    <string name="person_expert">个人专家</string>
    <string name="doctor">医生</string>
    <string name="counselor">心理咨询师</string>
    <string name="coach">教练</string>
    <string name="dietitian">营养师</string>
    <string name="choose_profession">选择职业</string>
    <string name="account">账号</string>
    <string name="back">返回</string>
    <string name="my_answer">我的回答</string>
    <string name="survey">问卷调查</string>
    <string name="open">开通</string>
    <string name="recharge">充值</string>
    <string name="personal_info">个人信息</string>
    <string name="avatar">头像</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="organization">机构</string>
    <string name="my_user">我的用户</string>
    <string name="detail">详情</string>
    <string name="more">更多</string>
    <string name="hot_question">热门帖子</string>
    <string name="toast_login">请先登录</string>
    <string name="logout">退出登录</string>
    <string name="un_answer">待解答</string>
    <string name="answered">已解答</string>
    <string name="expert">专家</string>
    <string name="save">保存</string>
    <string name="hint_confirm_password">请确认新密码</string>
    <string name="hint_new_pwd">请输入新密码</string>
    <string name="hint_old_pwd">请输入原密码</string>
    <string name="modify_password">修改密码</string>
    <string name="edit">编辑</string>
    <string name="my_point">我的积分</string>
    <string name="tread">踩</string>
    <string name="health_file">健康档案</string>
    <string name="unset">未设置</string>
    <string name="sport_data">健身数据</string>
    <string name="body_measure">身体测量</string>
    <string name="complete">完成</string>
    <string name="sign_in">签到</string>
    <string name="publish_article">发表文章</string>
    <string name="cloud_base">云基地</string>
    <string name="cloud_video">云视频</string>
    <string name="cloud_expert">云专家</string>
    <string name="cloud_dynamic">云动态</string>
    <string name="community">社区</string>
    <string name="find_expert">找专家</string>
    <string name="expert_detail">专家详情</string>
    <string name="cloud_essence">云荟萃</string>
    <string name="show_all_data">显示所有数据</string>
    <string name="history">历史</string>
    <string name="ranking_list">排行榜</string>
    <string name="toast_no_more_data">没有更多数据啦</string>
    <string name="toast_login_see_more">登录后可查看更多内容</string>
    <string name="help">帮助</string>
    <string name="settings">设置</string>
    <string name="string_help_text">当前应用缺少必要的权限。\\n\\n请点击\\\"设置\\\"-\\\"权限\\\"-打开所需权限。</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="version_update">版本更新</string>
    <string name="commit">提交</string>
    <string name="star_appraise">星级评价</string>
    <string name="feedback_content">反馈内容</string>
    <string name="toast_rating">为我们的APP打个分吧</string>
    <string name="toast_feedback">请填写您宝贵的意见</string>
    <string name="toast_feedback_success">反馈成功，感谢您的热心反馈</string>
    <string name="company_phone">公司电话</string>
    <string name="company_email">公司邮箱</string>
    <string name="company_postcode">公司邮编</string>
    <string name="company_address">公司地址</string>
    <string name="hint_feedback">您的反馈意见是我们前进的动力</string>
    <string name="select">%1$s/%2$s</string>
</resources>
