<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tianxiabuyi.sports_medicine.personal.SettingActivity">

    <TextView
        style="@style/BlankLine"
        android:background="#efeff4" />

    <TextView
        android:id="@+id/tv_modify_pwd"
        style="@style/BlackText_16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/detail"
        android:padding="12dp"
        android:text="@string/modify_password" />

    <TextView style="@style/HorizontalLine" />

    <TextView
        android:id="@+id/tv_version_update"
        style="@style/BlackText_16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/detail"
        android:padding="12dp"
        android:text="@string/version_update" />

    <TextView style="@style/HorizontalLine" />

    <TextView
        android:id="@+id/tv_feedback"
        style="@style/BlackText_16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/detail"
        android:padding="12dp"
        android:text="@string/feedback" />

    <TextView style="@style/HorizontalLine" />

    <TextView
        android:id="@+id/tv_about_us"
        style="@style/BlackText_16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/detail"
        android:padding="12dp"
        android:text="@string/about_us" />


    <TextView
        style="@style/BlankLine"
        android:background="#efeff4" />

    <TextView
        android:id="@+id/tv_logout"
        style="@style/BlackText_16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:padding="12dp"
        android:text="@string/logout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efeff4" />
</LinearLayout>
