<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/BlackText_16sp"
                android:layout_marginRight="16dp"
                android:text="@string/star_appraise" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="5.0"
                android:stepSize="1.0" />

        </LinearLayout>

        <TextView
            style="@style/BlackText_16sp"
            android:text="@string/feedback_content" />

        <EditText
            android:id="@+id/et_content"
            style="@style/Text_16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/feedback_et_bg"
            android:gravity="start"
            android:hint="@string/hint_feedback"
            android:minLines="5"
            android:padding="16dp"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_commit"
            style="@style/WhiteText_16sp"
            android:layout_width="match_parent"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_btn_shape"
            android:gravity="center"
            android:text="@string/commit" />
    </LinearLayout>
</ScrollView>
