<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <TextView
                style="@style/BlackText_16sp"
                android:layout_alignBaseline="@+id/et_username"
                android:layout_marginLeft="20dp"
                android:text="@string/username" />

            <com.eeesys.frame.view.CleanableEditText
                android:id="@+id/et_username"
                style="@style/Text_16sp"
                android:layout_width="match_parent"
                android:layout_toRightOf="@+id/confirm_pwd"
                android:background="@null"
                android:drawableEnd="@mipmap/clear_text"
                android:drawableRight="@mipmap/clear_text"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:padding="16dp"
                android:singleLine="true" />

            <TextView
                style="@style/HorizontalLine"
                android:layout_below="@+id/et_username" />


            <TextView
                style="@style/BlackText_16sp"
                android:layout_alignBaseline="@+id/cet_pwd"
                android:layout_marginLeft="20dp"
                android:text="@string/password" />

            <com.eeesys.frame.view.CleanableEditText
                android:id="@+id/cet_pwd"
                style="@style/Text_16sp"
                android:layout_width="match_parent"
                android:layout_below="@+id/et_username"
                android:layout_toRightOf="@+id/confirm_pwd"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:singleLine="true" />

            <TextView
                style="@style/HorizontalLine"
                android:layout_below="@+id/cet_pwd" />

            <TextView
                android:id="@+id/confirm_pwd"
                style="@style/BlackText_16sp"
                android:layout_alignBaseline="@+id/cet_repwd"
                android:layout_marginLeft="20dp"
                android:text="@string/confirm_password" />

            <com.eeesys.frame.view.CleanableEditText
                android:id="@+id/cet_repwd"
                style="@style/Text_16sp"
                android:layout_width="match_parent"
                android:layout_below="@+id/cet_pwd"
                android:layout_toRightOf="@+id/confirm_pwd"
                android:background="@null"
                android:hint="@string/hint_repassword"
                android:inputType="textPassword"
                android:padding="16dp"
                android:singleLine="true" />

            <TextView
                style="@style/HorizontalLine"
                android:layout_below="@+id/cet_repwd" />


            <TextView
                style="@style/BlackText_16sp"
                android:layout_alignBaseline="@+id/et_phone"
                android:layout_marginLeft="20dp"
                android:text="@string/phone_number" />

            <com.eeesys.frame.view.CleanableEditText
                android:id="@+id/et_phone"
                style="@style/Text_16sp"
                android:layout_width="match_parent"
                android:layout_toRightOf="@+id/confirm_pwd"
                android:background="@null"
                android:drawableEnd="@mipmap/clear_text"
                android:drawableRight="@mipmap/clear_text"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:layout_below="@+id/cet_repwd"
                android:padding="16dp"
                android:singleLine="true" />

            <TextView
                style="@style/HorizontalLine"
                android:layout_below="@+id/et_phone" />

            <!--<TextView
                style="@style/BlackText_16sp"
                android:layout_alignBaseline="@+id/et_verification"
                android:layout_marginLeft="20dp"
                android:text="@string/verification_code" />

            <com.eeesys.frame.view.CleanableEditText
                android:id="@+id/et_verification"
                style="@style/Text_16sp"
                android:layout_width="match_parent"
                android:layout_below="@+id/et_phone"
                android:layout_toLeftOf="@+id/btn_getVerification"
                android:layout_toRightOf="@+id/confirm_pwd"
                android:background="@null"
                android:drawableEnd="@mipmap/clear_text"
                android:drawableRight="@mipmap/clear_text"
                android:hint="@string/hint_verification"
                android:inputType="number"
                android:padding="20dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/btn_getVerification"
                style="@style/Text_14sp"
                android:layout_alignBaseline="@+id/et_verification"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/et_phone"
                android:layout_marginRight="16dp"
                android:background="@drawable/get_code_shape"
                android:gravity="center"
                android:onClick="getVerification"
                android:text="@string/get_verification_code"
                android:textColor="@color/colorPrimary" />-->

            <TextView
                style="@style/HorizontalLine"
                android:layout_below="@+id/et_phone" />

            <RelativeLayout
                android:id="@+id/certificate_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/et_phone"
                android:background="@color/blank"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="提醒:证书仅可上传一张, 再次上传将会替换已选中的证书"
                    />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@+id/iv_add_certificate"
                    android:layout_alignTop="@+id/iv_add_certificate"
                    android:layout_marginRight="16dp"
                    android:layout_below="@id/tip"
                    android:layout_toLeftOf="@+id/iv_add_certificate">

                    <ImageView
                        android:id="@+id/iv_preview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:background="@mipmap/preview_bg" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/icon_preview" />
                </FrameLayout>

                <ImageView
                    android:id="@+id/iv_add_certificate"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/tip"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:onClick="addCertificate"
                    android:src="@mipmap/upload_certificate" />

                <LinearLayout
                    android:id="@+id/ll_rule"
                    android:layout_below="@+id/iv_add_certificate"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/cb_rule"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/rule_selector"
                        android:paddingRight="12dp" />

                    <TextView
                        android:id="@+id/tv_rule"
                        style="@style/Text_14sp"
                        android:text="已阅读并同意《使用条款》和《隐私条款》"
                        android:textColor="#989292" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_confirm"
                    style="@style/WhiteText_16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_rule"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/login_btn_shape"
                    android:gravity="center"
                    android:onClick="toRegister"
                    android:text="@string/submit" />
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>


</LinearLayout>
